[package]
name = "grain_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
aus = { path = "../aus-rust" }
glob = "0.3.1"
rand = "0.8.5"
rusqlite = {version = "0.31.0", features = ["bundled"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
threadpool = "1.8.1"
